--- a/css.project46/css/mody.css
+++ b/css.project46/css/mody.css
@@ -4,3 +4,11 @@ background-color: #eee;
 width: 600px;
 padding: 20px;
 }
+
+/* hello mody  */
+.float {
+    overflow: hidden;
+    background-color: #eee;
+    width: 600px;
+    padding: 20px;
+    }
