--- a/css.project70/css/mody.css
+++ b/css.project70/css/mody.css
@@ -1,4 +1,7 @@
 
+/*
+
+*/
 * {
     box-sizing: border-box; 
     margin: 0;
@@ -16,7 +19,7 @@
     background-color:red ;
     color: white;
     padding: 20px;
-    
+
     font-size: 30px;
     font-weight: bold;
     text-align: center;
