--- a/css.project62/css/mody.css
+++ b/css.project62/css/mody.css
@@ -4,7 +4,7 @@ pointer Envent
 */
 
 .parent div {
-    background-color:red ;
+    background-color:yellow ;
     color: white;
     padding: 20px;
     font-size: 30px;
